log/build_2023-11-30_16-52-29/image_pub/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/maddy/turtlebot3_ws/install/image_pub/lib/python3.10/site-packages/image_pub/pub.py", line 80
    frame = block_reduce(frame, block_size= (3,3,1)func=np.mean)
                                            ^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

